# shady

./: .gitignore  Makecache  Makefile  README.md  TODO  configure.ac  meson.build  meson_options.txt  org.gnome.Shady.json  org.hasi.shady.json  program.vala  shader_area.vala  shady.gresource.xml  shady.vala  shyfile.prototype
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.Shady.json/: init
.flatpak-builder/checksums/: org.gnome.Shady.json
data/: Makefile.am  meson.build
data/css/: shady.css
data/desktop/: meson.build  org.hasi.shady.desktop  org.hasi.shady.desktop.in
data/gsettings/: meson.build  org.hasi.shady.gschema.xml
data/lang_specs/: shadertoy_glsl.lang  shadertoy_glsl_100es.lang  shadertoy_glsl_100es_full.lang  shadertoy_glsl_100es_shadertoy.lang  shadertoy_glsl_110.lang  shadertoy_glsl_110_full.lang  shadertoy_glsl_120.lang  shadertoy_glsl_120_full.lang  shadertoy_glsl_130.lang  shadertoy_glsl_130_full.lang  shadertoy_glsl_140.lang  shadertoy_glsl_140_full.lang  shadertoy_glsl_150.lang  shadertoy_glsl_300es.lang  shadertoy_glsl_310es.lang  shadertoy_glsl_320es.lang  shadertoy_glsl_330.lang  shadertoy_glsl_400.lang  shadertoy_glsl_410.lang  shadertoy_glsl_420.lang  shadertoy_glsl_430.lang  shadertoy_glsl_440.lang  shadertoy_glsl_450.lang  shadertoy_glsl_460.lang
data/search_provider/: meson.build  org.hasi.shady.search-provider.ini.in  org.hasi.shady.service.in
data/shader/: 3dtexture_channel_default.glsl  builtin_function_backport.glsl  builtin_function_backport_shadertoy.glsl  cubemap_channel_default.glsl  cubemap_default.glsl  load.glsl  none_channel_default.glsl  prefix.glsl  sound_default.glsl  suffix.glsl  texture_channel_default.glsl  vertex.glsl
data/shadertoy_presets/: Credits
data/shadertoy_presets/3dtextures/: gray_noise3d.json  rgba_noise3d.json
data/shadertoy_presets/cubemaps/: forest.json  forest_blurred.json  st_peters.json  st_peters_blurred.json  uffizi_gallery.json  uffizi_gallery_blurred.json
data/shadertoy_presets/textures/: abstract_1.json  abstract_2.json  abstract_3.json  bayer.json  blue_noise.json  buffer00.json  buffer01.json  buffer02.json  buffer03.json  font_1.json  gray_noise_medium.json  gray_noise_small.json  lichen.json  london.json  nyancat.json  organic_1.json  organic_2.json  organic_3.json  organic_4.json  pebbles.json  rgba_noise_medium.json  rgba_noise_small.json  rock_tiles.json  rusty_metal.json  stars.json  wood.json
data/shadertoy_presets/videos/: 1961_commercial.json  britney_spears.json  claude_van_damme.json  google_logo.json
src/: Makefile.am  app.vala  app_preferences.vala  app_window.vala  channel_area.vala  error_popover.vala  gl_context.vala  io_sugar.vala  lang_doc_popover.vala  main.vala  meson.build  notebook_action_widget.vala  notebook_tab_label.vala  search_provider.vala  shader.vala  shader_area.vala  shader_channel.vala  shader_channel_buffer_popover.vala  shader_channel_input_item.vala  shader_channel_input_popover.vala  shader_channel_soundcloud_popover.vala  shader_channel_texture_item.vala  shader_channel_texture_popover.vala  shader_channel_type_popover.vala  shader_editor.vala  shader_manager.vala  shader_scene.vala  shader_source_buffer.vala  shader_source_buffer_add_popover.vala  shader_source_view.vala  shadertoy_area.vala  shadertoy_resource_manager.vala  shadertoy_search.vala  shadertoy_search_dialog.vala  shadertoy_shader_item.vala
src/core/: compile_resources.vala  glsl_compiler.vala  glsl_minifier.vala  glsl_reference_parser.vala  glslang_validator.vala  keycodes.vala  render_resources.vala  shader_compiler.vala  shy_file.vala  source_generator.vala  texture_manager.vala
src/glslang/: glslang.h  glslang_bindings.cpp  glslang_bindings.h
src/vapi/: config.vapi  gl.vapi  shady-egl.vapi  shady-gl.vapi  shady-glslang.vapi
ui/: app-menu.ui  app-preferences.ui  app-window.ui  error-popover.ui  lang-doc-popover.ui  notebook-action-widget.ui  notebook-tab-label.ui  shader-area.ui  shader-channel-buffer-popover.ui  shader-channel-input-item.ui  shader-channel-input-popover.ui  shader-channel-soundcloud-popover.ui  shader-channel-texture-item.ui  shader-channel-texture-popover.ui  shader-channel-type-popover.ui  shader-channel.ui  shader-editor.ui  shader-scene.ui  shader-source-buffer-add-popover.ui  shader-source-buffer-line-error.ui  shader-source-buffer.ui  shader-source-view.ui  shadertoy-search-dialog.ui  shadertoy-shader-item.ui  shortcuts-help.ui
